--- a/BancolombiaObjetivosSMART/build.gradle
+++ b/BancolombiaObjetivosSMART/build.gradle
@@ -13,7 +13,9 @@ apply plugin: 'java-library'
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+   maven {
+   	url 'http://artifactory.bancolombia.corp/maven-bancolombia/'
+   }
 }
 
 dependencies {
